Remove web components polyfill and fix some layout issues

--- a/src/main/resources/gate/Gate.css
+++ b/src/main/resources/gate/Gate.css
@@ -693,7 +693,14 @@ fieldset > label > form > select {
   line-height: 32px;
 }
 fieldset > label > span[style] > textarea,
-fieldset > label > form[style] > textarea,
+fieldset > label > form[style] > textarea {
+  flex-grow: 1;
+  padding: 4px;
+  text-indent: 0;
+  line-height: 16px;
+  overflow: auto;
+  white-space: pre-line;
+}
 fieldset > label > span[style] > label,
 fieldset > label > form[style] > label {
   flex-grow: 1;
@@ -701,7 +708,7 @@ fieldset > label > form[style] > label {
   text-indent: 0;
   line-height: 16px;
   overflow: auto;
-  white-space: pre-line;
+  white-space: normal;
 }
 fieldset > label > span > input[type="file"],
 fieldset > label > form > input[type="file"],
